PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 9.6.0 Milestone 3
12 April 2020

pts-core: Allow automated per-thread/core/clock/RAM graphs within the result viewer
pts-core: Result viewer add "Limit displaying results to tests within:"
pts-core: From the result viewer allow "Show Geometric Means Per-Suite/Category"
pts-core: Add workload-topology sub-command
pts-core: Allow adding deprecated tests to build-suite
pts-core: CSV export improvements
pts-core: Add "Do Not Show Results With Incomplete Data" to the result viewer
pts-core: Allow test suite "Status" tag
pts-core: Don't report OB updates on deprecated tests or suites

Phoronix Test Suite 9.6.0 Milestone 2
5 April 2020

pts-core: Documentation updates
pts-core: External dependency updates
pts-core: Allow listing test profiles within the result viewer
pts-core: Allow listing test suites and test suite data within the result viewer
pts-core: Allow showing test profile information within the result viewer
pts-core: Various other updates to the result viewer
pts-core: Add vaapi as possible external dependency
update_checker: Add message of the day support

Phoronix Test Suite 9.6.0 Milestone 1
24 March 2020

pts-core: Add new analyze-run-times sub-command
pts-core: Allow hiding results from within the result viewer
pts-core: Allow generating performance-per-dollar metrics from within the result file
pts-core: Allow showing system logs from the result viewer
pts-core: Allow showing test description within the result viewer
pts-core: Fixes for running the result viewer from a website sub directory in correctly loading assets
pts-core: Add result viewer option "hide noisy results"
pts-core: Add result viewer option "hide results with little change/spread"
pts-core: Add result viewer option "only show results where X faster than Y"
pts-core: Add XML export to result viewer export menu
pts-core: Support deleting runs from the result viewer
pts-core: Improve the print view from the result viewer