@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Allow building virtual suites off external dependencies
+
 Phoronix Test Suite 9.6.0 Milestone 3
 12 April 2020
 
